update new theme

--- a/index.html
+++ b/index.html
@@ -1392,8 +1392,7 @@
                             <p style="text-align: center;"><strong><span
                                         style="font-size: 18pt;">🆕</span></strong><span
                                     style="text-decoration: underline; font-size: 18pt;"><strong><span
-                                            style="color: #ff6600; text-decoration: underline;"><a id="Ma-Moi"></a>BẬT
-                                            MÍ MÃ HOT 7/5</span></strong></span><strong><span
+                                            style="color: #ff6600; text-decoration: underline;"><a id="Ma-Moi"></a>MÃ HOT NGÀY 7/5</span></strong></span><strong><span
                                         style="font-size: 18pt;">🆕<br>
                                     </span></strong></p>
                             <div class="pcd_container-fluid">
