update new theme

--- a/test.html
+++ b/test.html
@@ -1445,7 +1445,7 @@
                                                 <div class="savings text-center">
                                                     <div>
                                                         <div class="large">
-                                                            Hàng quốc tế
+                                                            CODE TEST
                                                         </div>
                                                         <div class="type">
                                                             Sale </div>
@@ -1481,7 +1481,7 @@
                                                 <div class="savings text-center">
                                                     <div>
                                                         <div class="large">
-                                                            Từ Omo - Comfort
+                                                            CODE TEST
                                                         </div>
                                                         <div class="type">
                                                             Sale </div>
@@ -1621,7 +1621,6 @@
                                     </div>
 
                                 </div>
-                                <p><a style="font-size: 1rem;" href="#">🔝Lên Đầu Trang</a></p>
                             </div>
                             <hr>
                             <!-- KẾT THÚC MÃ HOT TRONG NGÀY -->
@@ -1799,6 +1798,7 @@
                                     </div>
                                 </div>
                             </div>
+
                             <p><a style="font-size: 1rem;" href="#">🔝Lên Đầu Trang</a></p>
                         </div>
 
