update new theme

--- a/index.html
+++ b/index.html
@@ -1301,10 +1301,10 @@
     <div id="page" class="hfeed site">
         <a class="skip-link screen-reader-text" href="#content">Chuyển tới phần nội dung</a>
         <header id="masthead" class="site-header" role="banner">
-            <div class="site-header-wrapper">
+            <div class="site-header-wrapper">   
                 <div class="site-title-wrapper">
                     <a href="https://sansalemoingay.github.io/" class="custom-logo-link" rel="home"><img width="1080"
-                            height="395" src="img/banner.png" class="custom-logo" alt="Mã Giảm Giá Shopee"
+                            height="395" src="img/bia.png" class="custom-logo" alt="Mã Giảm Giá Shopee"
                             sizes="(max-width: 1080px) 100vw, 1080px"></a>
                     <div class="site-title"><a href="https://sansalemoingay.github.io/" rel="home">Săn Sale Mỗi Ngày</a>
                     </div>
