update new theme

--- a/index.html
+++ b/index.html
@@ -1360,7 +1360,7 @@
                                     </span></strong></p>
                             <p><span style="font-size: 12pt;">&nbsp; Mỗi ngày, mình sẽ cập nhật đầy đủ mã trước 23h50.
                                     LƯU Ý
-                                    nên cho đồ vào giỏ hàng rồi hãy Click vào "Lấy Mã Ngay". Nhớ quay lại thường
+                                    nên cho đồ vào giỏ hàng rồi hãy Click vào "Nhận Ưu Đãi". Nhớ quay lại thường
                                     xuyên để không bỏ lỡ mã giảm giá tốt nhé!<br>
                                 </span></p>
                             <!-- MÃ HOT TRONG NGÀY -->
