--- a/index.html
+++ b/index.html
@@ -1304,8 +1304,8 @@
             <div class="site-header-wrapper">   
                 <div class="site-title-wrapper">
                     <a href="https://sansalemoingay.github.io/" class="custom-logo-link" rel="home"><img width="1080"
-                            height="395" src="img/banner.png" class="custom-logo" alt="Mã Giảm Giá Shopee"
-                            sizes="(max-width: 1080px) 100vw, 1080px"></a>
+                        height="395" src="img/66.png" class="custom-logo" alt="Mã Giảm Giá Shopee"
+                        sizes="(max-width: 1080px) 100vw, 1080px"></a>
                     <div class="site-title"><a href="https://sansalemoingay.github.io/" rel="home">Săn Sale Mỗi Ngày</a>
                     </div>
                     <div class="site-description">Sansalemoingay.github.io - Mã giảm giá</div>
